# aporia

./: .env.example  .gitignore  BRANCH_PROTECTION.md  CONTRIBUTING.md  Dockerfile  README.md  alembic.ini  eval-report.md  pyproject.toml
adr/: 002-dual-agent-pattern.md  003-transcript-as-state.md  004-semantic-markup-ui.md
app/: agent.py  config.py  event_stream.py  main.py  models.py  session_store.py  speculation.py
app/api/: content.py  learners.py  sessions.py  tutors.py
app/content_registry/: __init__.py  loader.py  registry.py
app/domain/: content.py  events.py  learner.py  session.py  tutor.py
app/roles/: identity_role.py  session_role.py  state_updater.py  trigger_policy.py  turn_role.py
app/store/: db.py  learners.py  sessions.py  tutors.py
content/coach_profiles/: patient-encourager.md
content/guardian_profiles/: child-7-9.md
content/programs/: elementary-math.md
content/skills/: add-1digit.md  add-2digit-carry.md
docs/: architecture.md  design.md  prd.md
docs/adr/: 001-structured-output-first.md
eval/: __init__.py  __main__.py  report.py  runner.py
eval-results/: improving_student.json  omit_carry_rookie.json  perfect_student.json  place_value_rookie.json
eval/scenarios/: improving_student.json  omit_carry_rookie.json  perfect_student.json  place_value_rookie.json
frontend/: .gitignore  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
frontend/e2e/: fake-agent.spec.ts  session.spec.ts  smoke.spec.ts
frontend/src/: App.css  App.tsx  api.ts
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_tutors.py
test/: test_api.py  test_e2e_api.py  test_eval.py
tests/: conftest.py  test_event_stream.py  test_speculation.py
tests/api/: helpers.py  test_content_api.py  test_identity_api.py  test_learners_api.py  test_sessions_api.py  (+4 more)
(+17 files in other folders)
