[project]
name = "tutor"
version = "0.2.0"
description = "AI tutor platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pydantic>=2.12",
    "pydantic-settings>=2.6",
    "psycopg[binary,pool]>=3.2",
    "python-frontmatter>=1.1",
    "alembic>=1.14",
    "sqlalchemy>=2.0",
    "pydantic-ai[anthropic,openai]>=1.94.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "testcontainers[postgres]>=4.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --strict-markers"
markers = [
    "smoke: live LLM calls against Fireworks (requires FIREWORKS_API_KEY)",
]
